feat(exemple): ajout du swagger

--- a/outils-notions-genie-logiciel-niveau-l2/examples/pattern-mvc-node/ormconfig.json
+++ b/outils-notions-genie-logiciel-niveau-l2/examples/pattern-mvc-node/ormconfig.json
@@ -1,10 +1,6 @@
 {
-    "type": "mysql",
-    "host": "localhost",
-    "port": 3306,
-    "username": "root",
-    "password": "root",
-    "database": "test",
+    "type": "sqlite",
+    "database": "invest-gn",
     "entities": [
         "dist/**/*.entity{.ts,.js}"
     ],
